--- a/builder/builder.html
+++ b/builder/builder.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+        <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+
 </body>
 </html>
