--- a/main/main.html
+++ b/main/main.html
@@ -8,5 +8,6 @@
 <body>
     <button onclick="window.location.replace('../client/client.html');" style="z-index: 5; position: relative;">Join game</button>
     <button onclick="window.location.replace('../host/host.html');" style="z-index: 5; position: relative;">Host game</button>
+    <button onclick="window.location.replace('../builder/main.html');" style="z-index: 5; position: relative;">Create your own game</button>
 </body>
 </html>
