--- a/builder/main.html
+++ b/builder/main.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+    
+    <script src="../libraries/prune.js"></script>
     <script src="main.js"></script>
+    
 </body>
 </html>
