--- a/client/client.html
+++ b/client/client.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+<body style="overflow: hidden; margin: 0;">
+    <button onclick="window.location.replace('../main/main.html');" style="z-index: 1; position: relative;">Main</button>
+    <input type="text" placeholder="PinCode" id="pincode">
+    
+    <div id="question-container">
+        <h1 id="question"></h1>
+        <div id="alternatives"></div>
+    </div>
+    
+    <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
+    <script src="../sharedFunctions.js"></script>
+    <script src="client.js"></script>
+    <script src="question.js"></script>
 </body>
 </html>
