--- a/host/host.html
+++ b/host/host.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+    <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
+    <script src="../sharedFunctions.js"></script>
+    <script src="host.js"></script>
 </body>
 </html>
