--- a/builder/main.html
+++ b/builder/main.html
@@ -9,6 +9,7 @@
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
     
     <script src="../libraries/prune.js"></script>
+    <script src="../sharedFunctions.js"></script>
     <script src="main.js"></script>
     
 </body>
