--- a/builder/main.html
+++ b/builder/main.html
@@ -11,6 +11,7 @@
     
     <script src="../libraries/prune.js"></script>
     <script src="main.js"></script>
+    <script src="css.js"></script>
     
 </body>
 </html>
