--- a/host/host.html
+++ b/host/host.html
@@ -11,6 +11,7 @@
     
     <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
     <script src="../sharedFunctions.js"></script>
+    <script src="showHTML.js"></script>
     <script src="loadGames.js"></script>
     <script src="host.js"></script>
 </body>
