--- a/builder/main.html
+++ b/builder/main.html
@@ -11,6 +11,7 @@
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
     
+    <script src="../sharedfunctions.js"></script>
     <script src="../libraries/prune.js"></script>
     <script src="main.js"></script>
     <script src="css.js"></script>
