--- a/main/main.html
+++ b/main/main.html
@@ -9,5 +9,7 @@
     <button onclick="window.location.replace('../client/client.html');" style="z-index: 5; position: relative;">Join game</button>
     <button onclick="window.location.replace('../host/host.html');" style="z-index: 5; position: relative;">Host game</button>
     <button onclick="window.location.replace('../builder/main.html');" style="z-index: 5; position: relative;">Create your own game</button>
+    <button onclick="window.location.replace('../login/index.html');" style="z-index: 5; position: relative;">Login</button>
+    <button onclick="window.location.replace('../login/create.html');" style="z-index: 5; position: relative;">Sign Up</button>
 </body>
 </html>
