--- a/builder/main.html
+++ b/builder/main.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
-    
+    <button onclick="save()" style="z-index: 5; position: relative;">Save</button>
+
     <script src="../sharedfunctions.js"></script>
     <script src="../libraries/prune.js"></script>
     <script src="main.js"></script>
