--- a/host/host.html
+++ b/host/host.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+    <script src="../sharedfunctions.js"></script>
     <script src="loadGames.js"></script>
 </body>
 </html>
