--- a/main/main.html
+++ b/main/main.html
@@ -9,7 +9,8 @@
     <button onclick="window.location.replace('../client/client.html');" style="z-index: 5; position: relative;">Join game</button>
     <button onclick="window.location.replace('../host/host.html');" style="z-index: 5; position: relative;">Host game</button>
     <button onclick="window.location.replace('../builder/main.html');" style="z-index: 5; position: relative;">Create your own game</button>
-    <button onclick="window.location.replace('../login/index.html');" style="z-index: 5; position: relative;">Login</button>
-    <button onclick="window.location.replace('../login/create.html');" style="z-index: 5; position: relative;">Sign Up</button>
+    <button onclick="window.location.replace('../login/index.html');" style="z-index: 5; position: relative;" id="login">Login</button>
+    <button onclick="window.location.replace('../login/create.html');" style="z-index: 5; position: relative;" id="signUp">Sign Up</button>
+    <script src="checkLogin.js"></script>
 </body>
 </html>
