--- a/builder/main.html
+++ b/builder/main.html
@@ -9,8 +9,11 @@
 
 </head>
 <body>
-    <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
-    <button onclick="save()" style="z-index: 5; position: relative;">Save</button>
+    <container id="maincontainer">
+        <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+        <button onclick="save()" style="z-index: 5; position: relative;">Save</button>
+    </container>
+    
 
     <script src="../sharedfunctions.js"></script>
     <script src="../libraries/prune.js"></script>
