--- a/client/client.html
+++ b/client/client.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+    <button onclick="window.location.replace('../index.html');" style="z-index: 5; position: relative;">Main</button>
 </body>
 </html>
