--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main/style.css">
 
 </head>
 <body>
@@ -28,9 +28,9 @@
     <div class="topBar">
         <contatiner id="gameContainer"></contatiner>
     </div>
-
-    <script src="../sharedfunctions.js"></script>
-    <script src="checkLogin.js"></script>
-    <script src="loadPublicGames.js"></script>
+    <script src="libraries/prune.js"></script>
+    <script src="sharedfunctions.js"></script>
+    <script src="main/checklogin.js"></script>
+    <script src="main/loadPublicGames.js"></script>
 </body>
 </html>
