--- a/builder/main.html
+++ b/builder/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <container id="maincontainer">
-        <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
+        <button onclick="window.location.replace('../index.html');" style="z-index: 5; position: relative;">Main</button>
         <button onclick="save()" style="z-index: 5; position: relative;">Save</button>
     </container>
     
