--- a/login/create.html
+++ b/login/create.html
@@ -25,7 +25,7 @@
       <button class="btn">Sign Up</button>
       <p class="text">You already have an account? <a href="index.html" target="_blank">Login Here!</a></p>
     </form>
-    <button class="btn" id="back" onclick="window.location.replace('../main/main.html');">Back</button>
+    <button class="btn" id="back" onclick="window.location.replace('../index.html');">Back</button>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
