--- a/login/index.html
+++ b/login/index.html
@@ -19,7 +19,7 @@
       <button class="btn" >Login</button>
       <p class="text">You don't have an account? <a href="create.html" target="_blank">Get One Here!</a></p>
     </form>
-    <button class="btn" id="back" onclick="window.location.replace('../main/main.html');">Back</button>
+    <button class="btn" id="back" onclick="window.location.replace('../index.html');">Back</button>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
