--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Public Games</h1>
         <contatiner id="searchContainer"></contatiner>
     </div>
-    <div class="topBar">
+    <div class="topBar" id="gameBar">
         <contatiner id="gameContainer"></contatiner>
     </div>
     <script src="libraries/prune.js"></script>
