--- a/client/client.html
+++ b/client/client.html
@@ -6,15 +6,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <main class="main-container">
         <button id="main-menu" onclick="window.location.replace('../main/main.html');">Meny</button>
-        <div id="form-wrapper" onclick="fetchHTML(document, '../host/host.html')">
+        <div id="form-wrapper">
             <form class="enter-pin-form">
                 <input id="game-input" type="text" placeholder="Pinkod" spellcheck="false" autocomplete="off">
                 <button id="enter-pin" type="button" onclick="connectToHost(gameInput.value)">Gå med</button>
