--- a/host/host.html
+++ b/host/host.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="style.css">
-
-    <title>Document</title>
+    <title>Kahoy</title>
 </head>
 <body>
     <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;" id="main">Main</button>    
@@ -15,7 +13,6 @@
     <script src="../sharedFunctions.js"></script>
     <script src="showHTML.js"></script>
 
-    
     <script src="loadGames.js"></script>
     <script src="host.js"></script>
 </body>
