--- a/host/states/showAnswers.html
+++ b/host/states/showAnswers.html
@@ -1,4 +1,5 @@
 <head>
+    <link rel="stylesheet" href="showAnswers.css">
 </head>
 <body>
     <button type="button" class="next" onclick="fetchHTML(document, 'leaderboard.html', 'states/')">Next</button>
