--- a/host/host.html
+++ b/host/host.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Kahoy</title>
 </head>
-<body>
-    <button onclick="window.location.replace('../main/main.html');" style="z-index: 5; position: relative;">Main</button>
-    <script src="loadGames.js"></script>
+<body>    
+    <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
+    <script src="../sharedFunctions.js"></script>
     <script src="host.js"></script>
 </body>
 </html>
