--- a/host/states/gameBlock.html
+++ b/host/states/gameBlock.html
@@ -16,10 +16,9 @@
         let clock = setInterval(() => {
             let time = parseInt(timer.textContent) - 1
             if (time > 0) { timer.textContent = time; return }
-            fetchHTML(document, 'preview.html', 'states/')
+            fetchHTML(document, 'showAnswers.html', 'states/')
             clearInterval(clock)
         }, 1000)
     </script>
-    <script src="sharedFunctions.js"></script>
 </body>
 </html>
