--- a/host/states/preview.html
+++ b/host/states/preview.html
@@ -43,7 +43,7 @@
         }
 
         let start = document.getElementsByClassName('next')[0]
-        start.disabled = true
+        start.disabled = false
         start.onclick = () => sendQuestion()
 
         /* WAITING FOR PLAYERS HAS NOT BEEN IMPLEMENTED */
