Host shows answers

--- a/host/states/gameBlock.html
+++ b/host/states/gameBlock.html
@@ -6,7 +6,7 @@
         <header id="question-text">This is a question</header>
         <div id="interface-container">
             <div id="timer">60</div>
-            <button class="next" onclick="fetchHTML(document, 'showAnswers.html', 'states/')">Next</button>
+            <button class="next" onclick="showAllAnswers()">Next</button>
         </div>
         <div id="alternatives-container"></div>
     </main>
