--- a/builder/main.html
+++ b/builder/main.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <container id="maincontainer">
-        <button onclick="window.location.replace('../index.html');" style="z-index: 5; position: relative;">Main</button>
+        <button onclick="window.location.replace('./../index.html');" style="z-index: 5; position: relative;">Main</button>
         <button onclick="save()" style="z-index: 5; position: relative;">Save</button>
     </container>
     
 
-    <script src="../sharedfunctions.js"></script>
-    <script src="../libraries/prune.js"></script>
+    <script src="./../sharedfunctions.js"></script>
+    <script src="./../libraries/prune.js"></script>
     <script src="main.js"></script>
     <script src="css.js"></script>
+
     
 </body>
 </html>
