--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="topBar">
         <container class="topContainer">
-            <button style="display: block" onclick="window.location.replace('../client/client.html');" style="z-index: 5; position: relative;">Join game</button>
-            <button onclick="window.location.replace('../builder/main.html');" style="z-index: 5; position: relative;" id="create">Your games</button>
+            <button style="display: block" onclick="window.location.replace('./../client/client.html');" style="z-index: 5; position: relative;">Join game</button>
+            <button onclick="window.location.replace('./../builder/main.html');" style="z-index: 5; position: relative;" id="create">Your games</button>
         </container>
         <container class="accountContainer">
-            <button style="display: block" onclick="window.location.replace('../login/index.html');" style="z-index: 5; position: relative;" id="login">Login</button>
-            <button onclick="window.location.replace('../login/create.html');" style="z-index: 5; position: relative;" id="signUp">Sign Up</button>
+            <button style="display: block" onclick="window.location.replace('./../login/index.html');" style="z-index: 5; position: relative;" id="login">Login</button>
+            <button onclick="window.location.replace('./../login/create.html');" style="z-index: 5; position: relative;" id="signUp">Sign Up</button>
         </container>
         <container class="logoContainer">
-            <img src="../logo.png">
+            <img src="./../logo.png">
         </container>
     </div>
     <div class="topBar">
