--- a/client/client.html
+++ b/client/client.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main class="main-container">
-        <button id="main-menu" onclick="window.location.replace('../index.html');">Meny</button>
+        <button id="main-menu" onclick="window.location.replace('./../index.html');">Meny</button>
         <div id="form-wrapper">
             <form class="enter-pin-form">
                 <input id="game-input" type="text" placeholder="Pinkod" spellcheck="false" autocomplete="off">
@@ -23,7 +23,7 @@
     
     
     <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
-    <script src="../sharedFunctions.js"></script>
+    <script src="./../sharedFunctions.js"></script>
     <script src="client.js"></script>
     <script src="question.js"></script>
 </body>
