--- a/host/states/preview.html
+++ b/host/states/preview.html
@@ -9,7 +9,8 @@
 
         <div id="lock-start-container">
             <div id="lock-start-wrapper">
-                <img id="lock" src="../../imgs/open-lock.png">
+                <img id="lock" src="./../">
+                <img id="lock" src="./../imgs/open-lock.png">
                 <button class="next" type="button">Start</button>
             </div>
         </div>
