./ added to files

--- a/host/states/clientCorrectAnswer.html
+++ b/host/states/clientCorrectAnswer.html
@@ -3,5 +3,15 @@
     <link rel="stylesheet" href="clientCorrectAnswer.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <main>
+            <div id="correct"></div>
+            <div id="score"></div>
+        </main>
+        <footer id="total-score-container">
+            <div id="total-score"></div>
+        </footer>
+    </div>
+    <script>
+    </script>
 </body>
