--- a/host/host.html
+++ b/host/host.html
@@ -8,7 +8,7 @@
 </head>
 <body>    
     <script src="https://unpkg.com/peerjs@1.5.0/dist/peerjs.min.js"></script>
-    <script src="../sharedFunctions.js"></script>
+    <script src="./../sharedFunctions.js"></script>
     <script src="host.js"></script>
 </body>
 </html>
