--- a/client/client.html
+++ b/client/client.html
@@ -14,10 +14,10 @@
     <main class="main-container">
         <button id="main-menu" onclick="window.location.replace('./../index.html');">Meny</button>
         <div id="form-wrapper">
-            <form class="enter-pin-form">
+            <div class="enter-pin-form">
                 <input id="game-input" type="text" placeholder="Pinkod" spellcheck="false" autocomplete="off">
                 <button id="enter-pin" type="button" onclick="connectToHost(gameInput.value)">Gå med</button>
-            </form>
+            </div>
         </div>
     </main>
     
